refactor: admin controller now uses generalized api response bodies, tests and api-spec are updated
