# backend/src/main/java/se/voizter/felparkering/api/controller/AdminController.java
@@ -1,8 +1,8 @@
 package se.voizter.felparkering.api.controller;
 
 import java.util.List;
-import java.util.Map;
 
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -13,12 +13,12 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import jakarta.validation.Valid;
+import se.voizter.felparkering.api.dto.ApiResponse;
 import se.voizter.felparkering.api.dto.AttendantGroupDetailDto;
+import se.voizter.felparkering.api.dto.DeletedUserResponse;
 import se.voizter.felparkering.api.dto.UserAdminDetailDto;
-import se.voizter.felparkering.api.model.AttendantGroup;
+import se.voizter.felparkering.api.enums.Message;
 import se.voizter.felparkering.api.model.User;
-import se.voizter.felparkering.api.repository.AttendantGroupRepository;
-import se.voizter.felparkering.api.repository.UserRepository;
 import se.voizter.felparkering.api.service.AdminService;
 
 @RestController
@@ -32,26 +32,47 @@ public class AdminController {
     }
 
     @GetMapping("/users")
-    public ResponseEntity<?> allUsers() {
+    public ResponseEntity<ApiResponse<List<UserAdminDetailDto>>> allUsers() {
         List<UserAdminDetailDto> users = adminService.getAllUsers();
-        return ResponseEntity.ok(Map.of("users", users));
+        return ResponseEntity.ok(
+            new ApiResponse<>(
+                users, 
+                Message.ADMIN_USERS_FETCHED.toString()
+            )
+        );
     }
 
     @PostMapping("/users")
-    public ResponseEntity<?> createAttendant(@Valid @RequestBody User attendant) {
+    public ResponseEntity<ApiResponse<UserAdminDetailDto>> createAttendant(@Valid @RequestBody User attendant) {
         UserAdminDetailDto user = adminService.createAttendant(attendant);
-        return ResponseEntity.ok(Map.of("user", "User with id: " + user.id() + " was created."));
+        return ResponseEntity
+            .status(HttpStatus.CREATED)
+            .body(new ApiResponse<>(
+                    user, 
+                    Message.USER_CREATED.toString()
+                )
+            );
     }
 
     @DeleteMapping("/users/{id}")
-    public ResponseEntity<?> deleteUser(@PathVariable Long id) {
+    public ResponseEntity<ApiResponse<DeletedUserResponse>> deleteUser(@PathVariable Long id) {
         adminService.deleteUser(id);
-        return ResponseEntity.ok(Map.of("message", "User with id: " + id + " was deleted."));
+        return ResponseEntity.ok(
+            new ApiResponse<>(
+                new DeletedUserResponse(id),
+                Message.USER_DELETED.toString()
+            )
+        );
     }
     
     @GetMapping("/attendants")
-    public ResponseEntity<?> allAttendantGroups() {
+    public ResponseEntity<ApiResponse<List<AttendantGroupDetailDto>>> allAttendantGroups() {
         List<AttendantGroupDetailDto> groups = adminService.getAllAttendantGroups();
-        return ResponseEntity.ok(Map.of("attendantGroups", groups));
+        return ResponseEntity.ok(
+            new ApiResponse<>(
+                groups,
+                Message.ADMIN_GROUPS_FETCHED.toString()
+            )
+        );
     }
 }
